--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
     "preview": "bunx --bun vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.13",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-scan": "^0.4.3"
+    "react-scan": "^0.4.3",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
@@ -37,8 +43,12 @@
     "lefthook": "^1.13.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "tw-animate-css": "^1.3.8",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.5"
-  }
+  },
+  "trustedDependencies": [
+    "@tailwindcss/oxide"
+  ]
 }
