--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@tanstack/eslint-plugin-router": "^1.131.2",
     "@tanstack/router-plugin": "^1.131.44",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/bun": "^1.2.22",
