--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-router": "^1.131.44",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.27.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -55,6 +56,8 @@
     "vite": "^7.1.5"
   },
   "trustedDependencies": [
-    "@tailwindcss/oxide"
+    "@tailwindcss/oxide",
+    "esbuild",
+    "lefthook"
   ]
 }
