--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
+    "@t3-oss/env-core": "^0.13.8",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-router": "^1.131.44",
     "class-variance-authority": "^0.7.1",
@@ -33,7 +34,8 @@
     "react-scan": "^0.4.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
