--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -34,7 +34,8 @@
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "backend/*": ["./convex/*"]
     }
   },
   "include": ["src"]
