--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "preview": "bunx --bun vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.47.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-core": "^0.13.8",
